assets/grid.css
.container {
	position: relative;
}

.background {					/* background that stretches full width */
	position: absolute;
	top: 0;
	z-index: -100;
	height: 100%;
}

.background.left {
	background: #ffffff;
}

.background.right {				/* pink portion of the background */
	background: #F3E4E4;
	left: 55%;
	z-index: 10;
}

.col-right {					/* column in the pink */
	width: 45%;
}

.col-left {						/* column in the white with content */
	width: 55%;
}

.col-left#location-section {
	position: relative;
}

.col-left#lodging-section {
	margin-top: 400px;
}

.left-image {
	height: 400px;
	position: absolute;
	top: 110%;
}

.left-image#cook-forest {
	background: url(img/cook-forest.jpg) no-repeat;
	background-size: 100%;
	background-position: 50% 50%;
	width: 600px;
	margin-left: 10%;
}

.left-image#map {
	background: url(img/map.png) no-repeat;
	background-size: 120%;
	background-position: 50% 50%;
	left: 100%;
	z-index: 100;
	width: 500px;
}

@media only screen and (max-width: 1000px) {
	.background.right {			/* making the pink smaller when the screen shrinks */
		left: 75%;
	}

	.col-right {
		width: 25%;
	}

	.col-left {
		width: 75%;
	}
}

@media only screen and (max-width: 700px) {

	.background {				/* removing all of the pink on mobile */
		display: none !important;
	}

	.col-left, .col-right {
		width: 100%;
	}

	.left-image {
		position: relative;
		display: block;
		width: 80%;
		overflow: hidden;
		width: 400px;
	}

	.left-image#cook-forest, .left-image#map {
		left: 0;
		width: 100%;
		height: 300px;
		background-size: auto 100%;
		margin: 0 auto;
		padding: 10px;
		margin-top: 20px;
	}

	.col-left#lodging-section {
		margin-top: 0px;
	}

}

/* wrapper containing the content */ 

.wrapper {
	max-width: 1100px;
	margin: 0 auto;
	padding: 60px 0;
}

.col {
	display: inline-block;
	vertical-align: top;
}

.section-header {
	width: 20%;
	text-align: right;
}

.section-body {
	width: 80%;
}

.inner-padding {
	padding: 0 60px 0 0;
}

@media only screen and (max-width: 1000px) {

	.section-header, .section-body {
		width: 100% !important;
		text-align: left;
	}

	.section-header {
		margin-bottom: 15px;
	}

	.wrapper {
		width: 85%;
		padding: 20px 0;
	}

	.inner-padding {
		padding: 0px;
	}

}


/* sticky header */

header {
	top: 0;
	position: fixed;
	z-index: 100;
}

@media only screen and (max-width: 700px) {

	header {
		position: absolute;
		height: 100%
		background: #F3E4E4;
		left: 0;
		width: 100%;
	}
}


/* exceptions to the grid */

.wrapper.hero {
	padding: 210px 0;
}

header .wrapper {
	padding: 0px;
}

@media only screen and (max-width: 1000px) {
	header .wrapper {
		width: 100%;
	}
}

@media only screen and (max-width: 700px) {
	.wrapper.hero {
		padding: 140px 40px 90px;
	}
}


/* footer */

footer {
	text-align: center;
	background: #D9C1C1;
}

